--- a/index.html
+++ b/index.html
@@ -41,10 +41,51 @@
   </section>
 
   <section>
+    <h2>Опыт</h2>
+    <table>
+      <caption>Таблица с данными о работе</caption>
+      <tr>
+        <th>Заголовок 1</th>
+        <th>Заголовок 2</th>
+        <th>Заголовок 3</th>
+      </tr>
+      <tr>
+        <td>Пункт 1</td>
+        <td>Пункт 2</td>
+        <td>Пункт 3</td>
+      </tr>
+      <tr>
+        <td>Пункт 1</td>
+        <td>Пункт 2</td>
+        <td>Пункт 3</td>
+      </tr>
+      <tr>
+        <td>Пункт 1</td>
+        <td>Пункт 2</td>
+        <td>Пункт 3</td>
+      </tr>
+      <tr>
+        <td>Пункт 1</td>
+        <td>Пункт 2</td>
+        <td>Пункт 3</td>
+      </tr>
+    </table>
+  </section>
+
+  <section>
     <h2>Связаться со мной</h2>
     <form action="">
-      <label for="text">Ваше имя:</label>
-      <input id="text" type="text" placeholder="Введите ваше имя">
+      <label for="name">Ваше имя:</label>
+      <br>
+      <input id="name" type="text" placeholder="Введите ваше имя">
+      <br>
+      <label for="email">Ваша почта:</label>
+      <br>
+      <input id="email" type="email" placeholder="Введите вашу почту">
+      <br>
+      <label for="number">Ваше число:</label>
+      <br>
+      <input id="number" type="number" placeholder="Введите число">
     </form>
   </section>
 
